# cpp_projects

./: .gitignore
wuziqi/: CMakeLists.txt
wuziqi/include/: AI.h  Chess.h  ChessGame.h  Man.h
wuziqi/src/: AI.cpp  Chess.cpp  ChessGame.cpp  Man.cpp
